--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="test" />
-    <title>Pics.io</title>
+    <title>Reenbit-Trainee-Camp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="popup-root"></div>
   </body>
 </html>
